# tagset

./: Cargo.toml  README.md
tagset/: Cargo.toml
tagset-macro/: Cargo.toml
tagset-macro/src/: direct.rs  lib.rs  parsing.rs  remove_attr.rs  tagset.rs  tagset_impl.rs  tagset_meta.rs  tagset_telety_alias_map.rs  tagset_trait_impl.rs  telety_util.rs  tokens.rs
tagset/src/: lib.rs  serde.rs
tagset/src/proxy/: serde.rs
tagset/tests/: attr.rs  from.rs  macros.rs  meta.rs  serde_roundtrip.rs
